# Agri-Agent

./: .env  README.md  agents.py  config.py  main.py  requirements.txt  tools.py  validated_pma.md
Agri-Project/: .env  README.md  pyproject.toml  validated_pma.md
agri-env-clean/: pyvenv.cfg
agri-env-clean/Scripts/: activate  activate.bat  dumppdf.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
agri_project/: README.md  pyproject.toml  validated_pma.md
agri_project/src/agri_project/: crew.py  main.py
agri_project/src/agri_project/config/: agents.yaml  tasks.yaml
agri_project/src/agri_project/tools/: custom_tool.py
