[project]
name = "agri_project"
version = "0.1.0"
description = "agri_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
agri_project = "agri_project.main:run"
run_crew = "agri_project.main:run"
train = "agri_project.main:train"
replay = "agri_project.main:replay"
test = "agri_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
